--- a/review_5/13-buttons/index.html
+++ b/review_5/13-buttons/index.html
@@ -16,19 +16,19 @@
         justify-content: center;
         gap: 15px;
       ">
-        <button class="button button-1" style="width: 70px; height: 50px">
+        <button style="width: 70px; height: 50px">
             Нажми меня
         </button>
-        <button class="button button-2" style="width: 70px; height: 50px">
+        <button style="width: 70px; height: 50px">
             Нажми меня
         </button>
-        <button class="button button-3" style="width: 70px; height: 50px">
+        <button style="width: 70px; height: 50px">
             Нажми меня
         </button>
-        <button class="button button-4" style="width: 70px; height: 50px">
+        <button style="width: 70px; height: 50px">
             Нажми меня
         </button>
-        <button class="button button-5" style="width: 70px; height: 50px">
+        <button style="width: 70px; height: 50px">
             Нажми меня
         </button>
         <div class="counter">0</div>
